# relife-forecasting-service

./: .gitignore  Dockerfile  Pipfile  README.md  Taskfile.yml  forecasting_apis.py  pyproject.toml  tests_ecm_application.py
.github/workflows/: docker-publish.yml  smoke-test.yml
building_examples_ecm/: BUI_test-cy__wall.json
src/relife_forecasting/: README.md  __init__.py  app.py  app1.py  building_examples.py  ecm_application.py  main.py  multiple_buildings.py  readme_forecasting_wiki.md  report_multiple_simulation.py  test_multiple_simulation.py  test_pv.py  test_simulate_using_api.py
src/relife_forecasting/analysis/: co2_reduction.py  ecm_application.py  multiple_buildings.py  report_multiple_simulation.py  test_multiple_simulation.py  test_overall_ecm.py
src/relife_forecasting/auth/: dependencies.py  keycloak.py
src/relife_forecasting/building_examples_ecm/: BUI_test-cy__wall.json  BUI_test-cy__wall_window.json  BUI_test-cy__window.json
src/relife_forecasting/building_examples_ecm_api/: BUI_sfh_1946_1969__roof_slab_wall_window.json  BUI_sfh_1946_1969__wall.json  BUI_sfh_1946_1969__wall_window.json  BUI_sfh_1946_1969__window.json  (+4 more)
tests/: conftest.py  report_multiple_simulation.py  run_single_save_main.py  test_app.py  test_archetypes_route.py  test_auth_simple.py  test_ecm_application_api_script.py  test_ecm_report_html.py  test_health.py  test_iso52016_building_type_aliases.py  test_json_to_internal_system.py  test_pv_potential.py  test_retry.py  test_run_single_save.py  test_run_squential_save.py  test_simulate_using_api.py  test_storage_simple.py  test_universal_auth.py  tests_ecm_application.py
tests/building_examples_ecm_api_single_script/: BUI_sfh_1946_1969__baseline.json
(+136 files in other folders)
