[project]
name = "relife-forecasting"
version = "0.1.0"
description = "ReLIFE Forecasting Service"
readme = "README.md"
authors = [{ name = "ReLIFE Developer", email = "developers@re-life.eu" }]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
    "pybuildingenergy>=0.1.0",
    "pandas>=2.1.0",
    "pydantic>=2.10.1",
]

[project.scripts]
run-service = "relife_forecasting:main"
validate-supabase = "relife_forecasting.scripts.validate_supabase:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1", "pytest-asyncio>=1.1.0"]
